# sentinel-2-data-processing

./: Dockerfile  LICENSE  README.md  pyproject.toml
docs/: system_design.md
docs/example/: nantes_bridge.geojson
src/: config.py  download.py  grid.py  io.py  main.py  process.py  stac.py  utils.py
