[project]
name = "sentinel-2-data-processing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "numpy>=1.26",
]

[project.scripts]
sentinel2-process = "src.main:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "matplotlib>=3.10.8",
]

